2002-02-08  Dan Winship  <danw@ximian.com>

	* src/soup-ssl-proxy/soup-openssl.c (soup_openssl_write): Handle
	SSL_ERROR_WANT_READ here too. Fixes at least Ximian 19792 and
	maybe others.

2002-01-17  Joe Shaw  <joe@ximian.com>

	* src/libsoup/soup-message.c: Add soup_message_get_http_version()
	function.

2002-01-08  Alex Graveley  <alex@ximian.com>

	* src/libsoup/soup-error.h: Add SOUP_ERROR_MOVED_TEMPORARILY
	(which was in early HTTP1.1 and HTTP1.0 specs) defined to
	SOUP_ERROR_FOUND (its replacement).

	* configure.in: Use /usr/lib as the default location for nss and
	nspr libs. Also, NSS static libs are named differently from their
	dynamic version.

2002-01-08  Dan Winship  <danw@ximian.com>

	* src/libsoup/soup-transfer.c (issue_final_callback): Remove the
	gio sources from the reader before invoking the read_done
	callback, since the connection will be marked free before the
	user's callback is called, so if that callback posts another
	request synchronously, the callback will end up getting called
	back again when the new request finishes, which is wrong.

2002-01-08  Alex Graveley  <alex@ximian.com>

	* TODO: Update

	* acconfig.h: undef SSL_PROXY_NAME

	* src/libsoup/soup-ssl.c (soup_ssl_get_iochannel): Execute
	customly chosen SSL proxy name.

	* src/soup-ssl-proxy/Makefile.am (install-exec-hook): Add
	install-time hook for customly named SSL proxy.

	* configure.in: Don't let -lpopt sneak into $LIBS. Add option to
	allow custom name for the openssl proxy.  Add option to allow
	static linking of the SSL library.

2002-01-02  Rodrigo Moya <rodrigo@ximian.com>

	* src/libsoup-apache/soup-apache.c (soup_apache_handler): updated
	for the new field names in SoupServerAuthBasic

2001-12-21  Alex Graveley  <alex@ximian.com>

	* src/libsoup/Makefile.am (libsoup_la_SOURCES): Add
	soup-server-auth.c.

	* src/libsoup/soup-server-auth.c: Implement server-side
	basic/digest authentication.
	(soup_server_auth_get_user): Impl. Allows server auth/path handler