@@ -185,9 +185,9 @@ soup_transfer_read_error_cb (GIOChannel* iochannel,
 
 	/*
 	 * Closing the connection to signify EOF is valid if content length is
-	 * unknown.
+	 * unknown, but only if headers have been sent.
 	 */
-	if (r->encoding == SOUP_TRANSFER_UNKNOWN) {
+	if (r->header_len && r->encoding == SOUP_TRANSFER_UNKNOWN) {
 		issue_final_callback (r);
 		goto CANCELLED;
 	}
@@ -479,6 +479,16 @@ soup_transfer_read_cb (GIOChannel   *iochannel,
 	}
 
  PROCESS_READ:
+	/* 
+	 * FIXME: Why are we getting a read_cb if there is no data to read? Yet
+	 *        error_cb isn't being called and we get no error from
+	 *        g_io_channel_read(). 
+	 */
+	if (r->header_len == 0 && total_read == 0) {
+		soup_transfer_read_error_cb (iochannel, G_IO_HUP, r);
+		return FALSE;
+	}
+
 	if (r->header_len == 0) {
 		gint index;
 
